--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
 	<groupId>com.megvii.faceid</groupId>
 	<artifactId>MegviiFaceID</artifactId>
+	<name>MegviiFaceID-SDK</name>
 	<version>0.1.0</version>
+	<packaging>jar</packaging>
+	<url>https://faceid.com/</url>
+	<description>Megvii FaceID API SDK</description>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -19,6 +23,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<!-- 屏蔽javadoc的严谨告警 -->
+		<additionalparam>-Xdoclint:none</additionalparam>
+	</properties>
 	
 	<dependencies>
 		<dependency>
