--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,15 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-
 repositories {
     jcenter()
     google()
 }
+
 dependencies {
     implementation group: 'com.squareup.okio', name: 'okio', version: '2.9.0'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.14.9'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation 'org.testng:testng:6.14.3'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
 }
