--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'maven'
 apply plugin: 'java'
 
 group = 'com.megvii.faceid'
-version = '0.1.0'
+version = '1.0.0-beta'
 
 description = "MegviiFaceID-SDK"
 
@@ -21,6 +21,6 @@ dependencies {
     implementation group: 'com.squareup.okio', name: 'okio', version: '2.9.0'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.14.9'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    implementation 'org.testng:testng:6.14.3'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
+    compileOnly 'org.testng:testng:6.14.3'
+    testCompileOnly group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
 }
